# cellogpt

./: .gitignore  LICENSE  Makefile  README.md  music.ly  output.ly  pyproject.toml  weights.safetensors  weights_s2s.safetensors
OLD_CelloGPT/: inference.py  music.ly  random_testing.py  test.py  training.py  transformer.py  weights.safetensors
cellofpt/: data_generation.ipynb  lilypond copy.py  lilypond.py  testing.py  transformer.py
cellogpt/: data.py  data_generation.ipynb  inference.py  inference_s2s.py  inference_sliding_window.py  lilypond.py  seq2seq_transformer.py  test.py  training.py  training_s2s.py  transformer.py
output/: music.ly  music_s2s.ly
