[tool.poetry]
name = "cellogpt"
version = "0.1.0"
description = "Automatic Cello Fingering using Sequence-to-Sequence Transformers"
authors = ["Adrian del Ser <adrian.delser@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mlx = "^0.14.0"
numpy = "^1.26.4"
abjad = "^3.19"
matplotlib = "^3.9.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
